Common/statistics-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statistics-db-deployment
spec:
  selector:
    matchLabels:
      service: statistics-db
  template:
    metadata:
      labels:
        service: statistics-db
    spec:
      containers:
      - name: statistics-db
        image: mysql:8.0
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: statistics-db
  namespace: default
  labels:
    service: statistics-db
spec:
  selector:
    service: statistics-db
  ports:
    - protocol: TCP
      targetPort: 3306 
      port: 3308
