Common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trailer-streaming-system-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /test-app(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: test-app
            port:
              number: 80
